2008-03-25  Brady Eidson  <beidson@apple.com>

        Reviewed by Jon Honeycutt's rubberstamp

        Fix a leak with the new WebArchive setup

        * WebView/WebArchive.mm:
        (-[WebArchivePrivate setCoreArchive:]): Deref() the old WebArchive

2008-03-25  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin

        Removed the concept of "pending archive resources" and the "archive resources delivery timer"
        from WebFrameLoaderClient, as those concepts have been pushed into WebCore

        * WebCoreSupport/WebFrameLoaderClient.h:
        * WebCoreSupport/WebFrameLoaderClient.mm:
        (WebFrameLoaderClient::WebFrameLoaderClient):

2008-03-25  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin

        Remove newly obsolete FrameLoaderClient methods

        * WebCoreSupport/WebFrameLoaderClient.h:
        * WebCoreSupport/WebFrameLoaderClient.mm:

2008-03-25  Brady Eidson  <beidson@apple.com>

        Release build fix

        * WebView/WebArchive.mm:
        (-[WebArchive subresources]):
        (-[WebArchive subframeArchives]):

2008-03-25  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin

        <rdar://problem/4516169> - Support WebArchives on Windows
        And paves the way for many future WebArchive bug fixes and enhancements

        This change moves most of the real workhorse code about WebArchives into WebCore.  It maintains 
        1-to-1 relationships between a few objects in WebCore and WebKit.  Such as:
         * WebArchive <-> LegacyWebArchive
         * WebResource <-> ArchiveResource
         * WebUnarchivingState <-> ArchiveResourceCollection
 
        The other biggest changes involve many FrameLoaderClient methods that existed soley for WebArchives 
        and now exist in WebCore

        * WebCoreSupport/WebFrameLoaderClient.mm:
        (WebFrameLoaderClient::clearUnarchivingState): Emptied - to be removed in a followup patch
        (WebFrameLoaderClient::finalSetupForReplace):